Backend: Fix memleak in serialize_program

Patch form: https://bugs.freedesktop.org/show_bug.cgi?id=93625

Signed-off-by: Frank Dittrich <frank.dittrich@mailbox.org>
Reviewed-by: Yang Rong <rong.r.yang@intel.com>